복구: 사라진 Reservation 파일 및 ErrorCode.java